Fix vertical align

--- a/inc/css/custom.css
+++ b/inc/css/custom.css
@@ -16,7 +16,7 @@
 table tr td {
     padding-left: 0;
     padding-right: 0;
-    vertical-align: middle;
+    vertical-align: middle !important;
 }
 
 .litebans-pager {
